--- a/src/components/CourseInput.css
+++ b/src/components/CourseInput.css
@@ -12,13 +12,12 @@ label {
 input[type="text"],
 select {
     border-radius: 6px;
-    border: none;
+    border: 1px solid black;
     font-size: 30px;
     height: 60px;
     width: 100%;
     padding: 10px;
     margin: 13px 0;
-    box-shadow: 2px 2px 1px 3px rgb(59, 57, 57);
 }
 .add-btn {
     text-align: center;
