--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,10 @@
 }
 
 body {
-    min-height: 100vh; /* Center the app vertically */
     font-family: Arial, sans-serif;
     background-color: #fefae0;
-    color: #333;
+    font-size: 25px;
+    color: #000000;
 }
 
 #root {
